--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,5 @@ applications:
     routes:
       - route: pal-tracker-rumeli-das.apps.evans.pal.pivotal.io
     env:
-      WELCOME_MESSAGE: Hello from Review Environment
+      WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
